--- a/localisation/ac_characters_l_english.yml
+++ b/localisation/ac_characters_l_english.yml
@@ -298,6 +298,25 @@
  ac_lilia_eberwein:0 "Lilia Eberwein"
  ac_catue_dragundaala:0 "Catue Dragundaala"
  ac_violet_evergarden:0 "Violet Evergarden"
+  ac_aegis:0 "Aegis"
+  ac_aika_sumeragi:0 "Aika Sumeragi"
+  ac_aoba_suzukaze:0 "Aoba Suzukaze"
+  ac_chii:0 "Chii"
+  ac_kaori_weber:0 "Kaori Weber"
+  ac_mako_mitsuki:0 "Mako Mitsuki"
+  ac_makoto_kikuchi:0 "Makoto Kikuchi"
+  ac_mei-fang:0 "Mei-Fang"
+  ac_miki_naoki:0 "Miki Naoki"
+  ac_mio_naruse:0 "Mio Naruse"
+  ac_rias_gremory:0 "Rias Gremory"
+  ac_rosaria:0 "Rosaria"
+  ac_reina_prowler:0 "Reina Prowler"
+  ac_sakura_minamoto:0 "Sakura Minamoto"
+  ac_sheryl_nome:0 "Sheryl Nome"
+  ac_shiki:0 "Shiki"
+  ac_tomoko_kuroki:0 "Tomoko Kuroki"
+  ac_vanessa_diodati:0 "Vanessa Diodati"
+  ac_yuriya_komiya:0 "Yuriya Komiya"
 
 #TRP
  ac_homare_nao:0 "Homare Nao"
@@ -341,3 +360,6 @@
  #advisor
   ac_mare_bello_fiore:0 "Mare Bello Fiore"
   ac_aoi_futaba:0 "Aoi Futaba"
+  ac_gasper_vladi:0 "Gasper Vladi"
+  ac_ryou_akizuki:0 "Ryou Akizuki"
+  ac_saki_mizushima:0 "Saki Mizushima"
