--- a/localisation/ac_characters_l_russian.yml
+++ b/localisation/ac_characters_l_russian.yml
@@ -288,10 +288,29 @@
   ac_meroune_lorelei:0 "Мероуна Лорелей"
  #advisors
   ac_shigure:0 "Сигурэ"
- ac_prinz_eugen:0 "Принц Ойген"
- ac_lilia_eberwein:0 "Лилия Эвельвайн"
- ac_catue_dragundaala:0 "Катюа Драгундала"
- ac_violet_evergarden:0 "Вайолет Эвергарден"
+  ac_prinz_eugen:0 "Принц Ойген"
+  ac_lilia_eberwein:0 "Лилия Эвельвайн"
+  ac_catue_dragundaala:0 "Катюа Драгундала"
+  ac_violet_evergarden:0 "Вайолет Эвергарден"
+  ac_aegis:0 "Эгида"
+  ac_aika_sumeragi:0 "Айка Сумэраги"
+  ac_aoba_suzukaze:0 "Аоба Сузуказэ"
+  ac_chii:0 "Ти"
+  ac_kaori_weber:0 "Каори Вэбер"
+  ac_mako_mitsuki:0 "Мако Мицуки"
+  ac_makoto_kikuchi:0 "Макото Кикути"
+  ac_mei-fang:0 "Мэйфан"
+  ac_miki_naoki:0 "Мики Наоки"
+  ac_mio_naruse:0 "Мио Нарусэ"
+  ac_rias_gremory:0 "Риас Гремори"
+  ac_rosaria:0 "Розария"
+  ac_reina_prowler:0 "Рэйна Проулер"
+  ac_sakura_minamoto:0 "Сакура Минамото"
+  ac_sheryl_nome:0 "Шерил Ноум"
+  ac_shiki:0 "Шики"
+  ac_tomoko_kuroki:0 "Томоко Куроки"
+  ac_vanessa_diodati:0 "Ванесса Диодати"
+  ac_yuriya_komiya:0 "Юрия Комия"
 
 #traps
  ac_homare_nao:0 "Хомаре Нао"
@@ -330,3 +349,7 @@
  ac_russell:0 "Рассел"
  ac_mare_bello_fiore:0 "Маре Белло Фиоре"
  ac_aoi_futaba:0 "Аой Футаба"
+ ac_gasper_vladi:0 "Гаспар Влади"
+ ac_ryou_akizuki:0 "Рё Акидзуки"
+ ac_saki_mizushima:0 "Саки Мидзусима"
+ 
