--- a/localisation/ac_decision_l_english.yml
+++ b/localisation/ac_decision_l_english.yml
@@ -1,44 +1,57 @@
 ﻿l_english:
 #ac_anime_characters_category
- ac_anime_characters_category:0 "Anime characters"
- ac_take_girls:0 "Add girls"
- ac_take_girls_tt:0 "Lots of girls will be added"
- ac_take_androids:0 "Add android girls"
- ac_take_androids_tt:0 "Lots of android girls will be added"
- ac_take_monsters:0 "Add monster girls"
- ac_take_monsters_tt:0 "Lots of monster girls will be added"
- ac_take_traps:0 "Add traps"
- ac_take_traps_tt:0 "Many traps will be added"
- ac_change_leader_to_anastasia_romanova:0 "Assign §GAnastasia Romanova§! the leader"
- ac_change_leader_to_histoire:0 "Assign §GHistoire§! the leader"
- ac_change_leader_to_velvet_crowe:0 "Assign §GVelvet Crowe§! the leader"
- ac_change_leader_to_astolfo:0 "Assign §GAstolfo§! the leader"
- ac_anastasia_romanova_taked_tt:0 "§BAnastasia Romanova§!"
- ac_histoire_taked_tt:0 "§BHistoire§!"
- ac_velvet_crowe_taked_tt:0 "§GVelvet Crowe§!"
- ac_astolfo_taked_tt:0 "§BAstolfo§!"
- ac_deactivate:0 "Hide category"
- ac_change_leader_to_alisa_illinichina_amiella:0 "Assign §GAlisa Illinichina Amiella§! the leader"
- ac_alisa_illinichina_amiella_taked_tt:0 "§GAlisa Illinichina Amiella§!"
- ac_change_leader_to_t_elos:0 "Assign §GT-Elos§! the leader"
- ac_t_elos_taked_tt:0 "§GT-Elos§!"
- ac_change_leader_to_yuuko_yoshida:0 "Assign §GYuuko Yoshida§! the leader"
- ac_yuuko_yoshida_tt:0 "§GYuuko Yoshida§!"
- ac_change_leader_to_homare_nao:0 "Assign §GHomare Nao§! the leader"
- ac_homare_nao_taked_tt:0 "§GHomare Nao§!"
- ac_change_leader_to_mind_flayer:0 "Assign §GMind Flayer§! the leader"
- ac_change_leader_to_celestine_lucullus:0 "Assign §GCelestine Lucullus§! the leader"
- ac_change_leader_to_takumi_musashino:0 "Assign §GTakumi Musashino§! the leader"
- ac_change_leader_to_hideri_kanzaki:0 "Assign §GHideri Kanzaki§! the leader"
+ ac_anime_characters_category: "Anime characters"
+ ac_decision_create_anime_academy: "Create an Anime Academy"
+ ac_decision_create_anime_general_staffy: "Create Anime General Staff"
+ ac_decision_create_anime_admiralty: "Create Anime Admiralty"
+ ac_decision_create_anime_intelligence_agency: "Create anime intelligence agency"
+ ac_decision_gacha_generals: "Hire a General"
+ ac_decision_gacha_admirals: "Hire Admiral"
+ ac_decision_gacha_political_advisors: "Hire an advisor"
+ ac_decision_gacha_theorists: "Hire a theorist"
+ ac_decision_gacha_operatives: "Hire an operative"
+ ac_decision_enable_traps: "Enable Traps"
+ ac_decision_enable_traps_desc: "§RAlarm!§!"
+ ac_decision_gacha_trap_generals: "Hire trap generals"
+ ac_decision_gacha_trap_admirals: "Hire an admiral's trap."
+ ac_decision_gacha_trap_political_advisors: "Hire a counselor trap"
+ ac_decision_gacha_trap_theorists: "Hire a theorist trap"
+ ac_decision_gacha_trap_operatives: "Hire an operative"
+ ac_change_leader_to_anastasia_romanova: "Assign §GAnastasia Romanova§! the leader"
+ ac_change_leader_to_histoire: "Assign §GHistoire§! the leader"
+ ac_change_leader_to_velvet_crowe: "Assign §GVelvet Crowe§! the leader"
+ ac_change_leader_to_astolfo: "Assign §GAstolfo§! the leader"
+ ac_anastasia_romanova_taked_tt: "§BAnastasia Romanova§!"
+ ac_histoire_taked_tt: "§BHistoire§!"
+ ac_velvet_crowe_taked_tt: "§GVelvet Crowe§!"
+ ac_astolfo_taked_tt: "§BAstolfo§!"
+ ac_deactivate: "Hide category"
+ ac_change_leader_to_alisa_illinichina_amiella: "Assign §GAlisa Illinichina Amiella§! the leader"
+ ac_alisa_illinichina_amiella_taked_tt: "§GAlisa Illinichina Amiella§!"
+ ac_change_leader_to_t_elos: "Assign §GT-Elos§! the leader"
+ ac_t_elos_taked_tt: "§GT-Elos§!"
+ ac_change_leader_to_yuuko_yoshida: "Assign §GYuuko Yoshida§! the leader"
+ ac_yuuko_yoshida_tt: "§GYuuko Yoshida§!"
+ ac_change_leader_to_homare_nao: "Assign §GHomare Nao§! the leader"
+ ac_homare_nao_taked_tt: "§GHomare Nao§!"
+ ac_change_leader_to_mind_flayer: "Assign §GMind Flayer§! the leader"
+ ac_change_leader_to_celestine_lucullus: "Assign §GCelestine Lucullus§! the leader"
+ ac_change_leader_to_takumi_musashino: "Assign §GTakumi Musashino§! the leader"
+ ac_change_leader_to_hideri_kanzaki: "Assign §GHideri Kanzaki§! the leader"
 
-#ac_anime_characters_reactivate_category
- ac_anime_characters_reactivate_category:0 "Reopen the anime character category"
- ac_reactivate:0 "Reopen category"
+#tooltips
+ ac_tt_count_generals: "At least 5 generals hired"
+ ac_tt_count_admirals: "At least 5 admirals hired"
+ ac_tt_gacha_generals: "Get a random general"
+ ac_tt_gacha_admirals: "Get a random admiral"
+ ac_tt_gacha_political_advisors: "Get a random advisor"
+ ac_tt_gacha_theorists: "Get a random theorist"
+ ac_tt_gacha_operatives: "Get a random operative"
 
 #political_actions
- ac_retire_leader:0 "§G[ROOT.GetLeader]§! is retiring"
- ac_retire_leader_tt:0 "§YEarly elections will take place§!"
+ ac_retire_leader: "§G[ROOT.GetLeader]§! is retiring"
+ ac_retire_leader_tt: "§YEarly elections will take place§!"
 
 #create_subject
- ac_subjects_category:0 "Subjects"
- ac_change_country_leader:0 "Change leader §Y[From.GetNameDef]§!"
+ ac_subjects_category: "Subjects"
+ ac_change_country_leader: "Change leader §Y[From.GetNameDef]§!"
