--- a/localisation/ac_decision_l_russian.yml
+++ b/localisation/ac_decision_l_russian.yml
@@ -1,55 +1,59 @@
 ﻿l_russian:
 #ac_anime_characters_category
- ac_anime_characters_category:0 "Аниме персонажи"
- ac_take_girls:0 "Добавить девушек"
- ac_take_girls_tt:0 "Будет добавлено множество девушек"
- ac_take_androids:0 "Добавить девушек андроидов"
- ac_take_androids_tt:0 "Будет добавлено множество девушек андроидов"
- ac_take_monsters:0 "Добавить девушек монстров"
- ac_take_monsters_tt:0 "Будет добавлено множество дувушек монстров"
- ac_take_traps:0 "Добавить трапов"
- ac_take_traps_tt:0 "Будет добавлено множество трапов.\n§RАхтунг!§!"
- ac_change_leader_to_anastasia_romanova:0 "Назначить  §GАнастасию Романову§! лидером"
- ac_change_leader_to_histoire:0 "Назначить  §GИстуар§! лидером"
- ac_change_leader_to_velvet_crowe:0 "Назначить  §GВельвет Крау§! лидером"
- ac_change_leader_to_astolfo:0 "Назначить  §GАстольфо§! лидером"
- ac_anastasia_romanova_taked_tt:0 "§BАнастасия Романова§!"
- ac_histoire_taked_tt:0 "§BИстуар§!"
- ac_velvet_crowe_taked_tt:0 "§GВельвет Крау§!"
- ac_astolfo_taked_tt:0 "§BАстольф§!"
- ac_deactivate:0 "Скрыть категорию"
- ac_change_leader_to_alisa_illinichina_amiella:0 "Назначить §GАлиса Ильинична Амелла§! лидером"
- ac_alisa_illinichina_amiella_taked_tt:0 "§GАлиса Ильинична Амелла§!"
- ac_change_leader_to_t_elos:0 "Назначить §GT-Elos§! лидером"
- ac_t_elos_taked_tt:0 "§GT-Elos§!"
- ac_change_leader_to_yuuko_yoshida:0 "Назначить §GЮко Ёсида§! лидером"
- ac_yuuko_yoshida_tt:0 "§GЮко Ёсида§!"
- ac_change_leader_to_homare_nao:0 "Назначить §GХомаре Нао§! лидером"
- ac_homare_nao_taked_tt:0 "§GХомаре Нао§!"
- ac_change_leader_to_mind_flayer:0 "Назначить §RПожиратель разума§! лидером"
- ac_change_leader_to_celestine_lucullus:0 "Назначить §GСелестина Лукулл§! лидером"
- ac_change_leader_to_takumi_musashino:0 "Назначить §GТакуми Мусасино§! лидером"
- ac_change_leader_to_hideri_kanzaki:0 "Назначить §GХидэри Кандзаки§! лидером"
+ ac_anime_characters_category: "Аниме персонажи"
+ ac_decision_create_anime_academy: "Создать Анимешную академию"
+ ac_decision_create_anime_general_staffy: "Создать Анимешный генеральный штаб"
+ ac_decision_create_anime_admiralty: "Создать Анимешное адмиралтейство"
+ ac_decision_create_anime_intelligence_agency: "Создать Анимешное разведовательное агенство"
+ ac_decision_gacha_generals: "Нанять генерала"
+ ac_decision_gacha_admirals: "Нанять адмирала"
+ ac_decision_gacha_political_advisors: "Нанять советника"
+ ac_decision_gacha_theorists: "Нанять теоретика"
+ ac_decision_gacha_operatives: "Нанять оперативника"
+ ac_decision_enable_traps: "Разрешить Трапов"
+ ac_decision_enable_traps_desc: "§RАхтунг!§!"
+ ac_decision_gacha_trap_generals: "Нанять трапа генерала"
+ ac_decision_gacha_trap_admirals: "Нанять трапа адмирала"
+ ac_decision_gacha_trap_political_advisors: "Нанять трапа советника"
+ ac_decision_gacha_trap_theorists: "Нанять трапа теоретика"
+ ac_decision_gacha_trap_operatives: "Нанять оперативника"
 
-#ac_anime_characters_reactivate_category
- ac_anime_characters_reactivate_category:0 "Повторно открыть категорию аниме персонажей"
- ac_reactivate:0 "Открыть категорию"
+
+ ac_change_leader_to_anastasia_romanova: "Назначить  §GАнастасию Романову§! лидером"
+ ac_change_leader_to_histoire: "Назначить  §GИстуар§! лидером"
+ ac_change_leader_to_velvet_crowe: "Назначить  §GВельвет Крау§! лидером"
+ ac_change_leader_to_astolfo: "Назначить  §GАстольфо§! лидером"
+ ac_anastasia_romanova_taked_tt: "§BАнастасия Романова§!"
+ ac_histoire_taked_tt: "§BИстуар§!"
+ ac_velvet_crowe_taked_tt: "§GВельвет Крау§!"
+ ac_astolfo_taked_tt: "§BАстольф§!"
+ ac_deactivate: "Скрыть категорию"
+ ac_change_leader_to_alisa_illinichina_amiella: "Назначить §GАлиса Ильинична Амелла§! лидером"
+ ac_alisa_illinichina_amiella_taked_tt: "§GАлиса Ильинична Амелла§!"
+ ac_change_leader_to_t_elos: "Назначить §GT-Elos§! лидером"
+ ac_t_elos_taked_tt: "§GT-Elos§!"
+ ac_change_leader_to_yuuko_yoshida: "Назначить §GЮко Ёсида§! лидером"
+ ac_yuuko_yoshida_tt: "§GЮко Ёсида§!"
+ ac_change_leader_to_homare_nao: "Назначить §GХомаре Нао§! лидером"
+ ac_homare_nao_taked_tt: "§GХомаре Нао§!"
+ ac_change_leader_to_mind_flayer: "Назначить §RПожиратель разума§! лидером"
+ ac_change_leader_to_celestine_lucullus: "Назначить §GСелестина Лукулл§! лидером"
+ ac_change_leader_to_takumi_musashino: "Назначить §GТакуми Мусасино§! лидером"
+ ac_change_leader_to_hideri_kanzaki: "Назначить §GХидэри Кандзаки§! лидером"
 
 #tooltips
- ac_political_advisor_tt:0 "§YПолитик§!"
- ac_theorist_tt:0 "§OТеоретик§!"
- ac_navy_chief_tt:0 "§BГлавком ВМС§!"
- ac_air_chief_tt:0 "§LГлавком ВВС§!"
- ac_army_chief_tt:0 "§GГлавком Армии§!"
- ac_high_command_tt:0 "§YВысшее командование§!"
- ac_corps_commander_tt:0 "§GГенерал§!"
- ac_navy_leader_tt:0 "§BАдмирал§!"
- ac_operative_leader_tt:0 "§RАгент§!"
+ ac_tt_count_generals: "Нанято хотя бы 5 генералов"
+ ac_tt_count_admirals: "Нанято хотя бы 5 адмиралов"
+ ac_tt_gacha_generals: "Получим случайного генерала"
+ ac_tt_gacha_admirals: "Получим случайного адмирала"
+ ac_tt_gacha_political_advisors: "Получим случайного советника"
+ ac_tt_gacha_theorists: "Получим случайного теоретика"
+ ac_tt_gacha_operatives: "Получим случайного оперативника"
 
 #political_actions
- ac_retire_leader:0 "§G[ROOT.GetLeader]§! уйдёт в отставку"
- ac_retire_leader_tt:0 "§YПроизойдут досрочные выборы§!"
+ ac_retire_leader: "§G[ROOT.GetLeader]§! уйдёт в отставку"
+ ac_retire_leader_tt: "§YПроизойдут досрочные выборы§!"
 
 #create_subject
- ac_subjects_category:0 "Субъекты"
- ac_change_country_leader:0 "Сменить лидера §Y[From.GetNameDef]§!"
+ ac_subjects_category: "Субъекты"
+ ac_change_country_leader: "Сменить лидера §Y[From.GetNameDef]§!"
