--- a/localisation/ac_traits_l_english.yml
+++ b/localisation/ac_traits_l_english.yml
@@ -1,49 +1,54 @@
 ﻿l_english:
 #traits
-ac_idol:0 "Idol"
-ac_patron_of_intelligence:0 "Patron saint of intelligence"
-ac_tsundere:0 "Tsundere"
-ac_patron_of_the_military_industrial_complex:0 "The patron saint of the military-industrial complex"
-ac_dictator:0 "Dictator"
-ac_patron_of_industry:0 "Patron of the industry"
-ac_android:0 "Android"
-ac_patron_of_science:0 "Patron saint of science"
-ac_superweapon:0 "Super weapon"
-ac_empress:0 "The Empress"
-ac_popular_figurehead:0 "§BPopular figurehead§!"
-ac_intelligence_princess:0 "Spy Princess"
-ac_silent_workhorse:0 "Workhorse"
-ac_nuclear_mazoku:0 "Atomic Mazoku"
-ac_girl_scientist:0 "Girl scientist"
-ac_propaganda_expert:0 "Propoganda expert"
-ac_first_lady:0 "First lady"
-ac_naval_base_engineer:0 "Naval base builder"
-ac_infrastructure_developer:0 "Transport Minister"
-ac_captain_of_industry:0 "Minister of Invention"
-ac_war_industrialist:0 "Military tycoon"
-ac_submarine_manufacturer:0 "Submarine developer"
-ac_carrier_manufacturer:0 "Aircraft Carrier Developer"
-ac_battlefleet_designer:0 "Surface warship developer"
-ac_anime_tyan:0 "Anime girl"
-ac_trap:0 "Trap"
-ac_atom_concern_trait:0 "Atomic concern"
-ac_tyan_militarist:0 "§YMilitarist§!"
-ac_defender:0 "Defender"
-ac_revolutionary:0 "§RRevolutionary§!"
-ac_peoples_favorite:0 "§BFavorite of the people§!"
-ac_jack_of_all_trades_trait:0 "Jack of all trades"
-ac_minister_of_health:0 "Minister of Health"
-ac_peoples_favorite_minister:0 "§BPeoples Favorite§!"
-ac_demon_lord:0 "§RDemon Lord§!"
-ac_communist_revolutionary:0 "Communist Revolutionary"
-ac_democratic_reformer:0 "Democratic Reformer"
-ac_fascist_demagogue:0 "Fascist Demagogue"
-ac_staunch_monarchist:0 "Staunch Monarchist"
-ac_princess_of_terror:0 "§RPrincess of Terror§!"
+ac_idol: "Idol"
+ac_patron_of_intelligence: "Patron saint of intelligence"
+ac_tsundere: "Tsundere"
+ac_patron_of_the_military_industrial_complex: "The patron saint of the military-industrial complex"
+ac_dictator: "Dictator"
+ac_patron_of_industry: "Patron of the industry"
+ac_android: "Android"
+ac_patron_of_science: "Patron saint of science"
+ac_superweapon: "Super weapon"
+ac_empress: "The Empress"
+ac_popular_figurehead: "§BPopular figurehead§!"
+ac_intelligence_princess: "Spy Princess"
+ac_silent_workhorse: "Workhorse"
+ac_nuclear_mazoku: "Atomic Mazoku"
+ac_girl_scientist: "Girl scientist"
+ac_propaganda_expert: "Propoganda expert"
+ac_first_lady: "First lady"
+ac_naval_base_engineer: "Naval base builder"
+ac_infrastructure_developer: "Transport Minister"
+ac_captain_of_industry: "Minister of Invention"
+ac_war_industrialist: "Military tycoon"
+ac_submarine_manufacturer: "Submarine developer"
+ac_carrier_manufacturer: "Aircraft Carrier Developer"
+ac_battlefleet_designer: "Surface warship developer"
+ac_anime_tyan: "Anime girl"
+ac_trap: "Trap"
+ac_atom_concern_trait: "Atomic concern"
+ac_tyan_militarist: "§YMilitarist§!"
+ac_defender: "Defender"
+ac_revolutionary: "§RRevolutionary§!"
+ac_peoples_favorite: "§BFavorite of the people§!"
+ac_jack_of_all_trades_trait: "Jack of all trades"
+ac_minister_of_health: "Minister of Health"
+ac_peoples_favorite_minister: "§BPeoples Favorite§!"
+ac_demon_lord: "§RDemon Lord§!"
+ac_communist_revolutionary: "Communist Revolutionary"
+ac_democratic_reformer: "Democratic Reformer"
+ac_fascist_demagogue: "Fascist Demagogue"
+ac_staunch_monarchist: "Staunch Monarchist"
+ac_princess_of_terror: "§RPrincess of Terror§!"
+ ac_quartermaster_general: "Quartermaster General"
 
 #unut leader traits
- ac_exp_trait:0 "High learning ability"
- ac_exp_navy_trait:0 "High learning ability"
+ ac_exp_trait: "High learning ability"
+ ac_exp_navy_trait: "High learning ability"
 
-
+#ideas
+ ac_idea_anime_academy: "Anime Academy"
+ ac_idea_anime_general_staff: "Anime General Staff".
+ ac_idea_idea_anime_anime_intelligence_agency: "Anime Intelligence Agency".
+ ac_idea_anime_admiralty: "Anime Admiralty".
 
