--- a/localisation/ac_traits_l_russian.yml
+++ b/localisation/ac_traits_l_russian.yml
@@ -1,46 +1,53 @@
 ﻿l_russian:
 #traits
- ac_idol:0 "Идол"
- ac_patron_of_intelligence:0 "Покровитель разведки"
- ac_tsundere:0 "Цундере"
- ac_patron_of_the_military_industrial_complex:0 "Покровитель ВПК"
- ac_dictator:0 "Диктатор"
- ac_patron_of_industry:0 "Покровитель индустрии"
- ac_android:0 "Андроид"
- ac_patron_of_science:0 "Покровитель науки"
-ac_superweapon:0 "Супер оружие"
-ac_empress:0 "Императрица"
-ac_popular_figurehead:0 "§BПопулярная§!"
-ac_intelligence_princess:0 "Принцесса-шпионка"
-ac_silent_workhorse:0 "Рабочая лошадка"
-ac_nuclear_mazoku:0 "Атомный мазоку"
-ac_girl_scientist:0 "Девушка учёный"
-ac_propaganda_expert:0 "Эксперт по пропоганде"
-ac_first_lady:0 "Первая леди"
-ac_naval_base_engineer:0 "Строитель военно морских баз"
-ac_infrastructure_developer:0 "Министр транспорта"
-ac_captain_of_industry:0 "Министр примышленности"
-ac_war_industrialist:0 "Военный магнат"
-ac_submarine_manufacturer:0 "Разработчик подводных лодок"
-ac_carrier_manufacturer:0 "Разработчик Авианосцев"
-ac_battlefleet_designer:0 "Разработчик надводных боевых кораблей"
-ac_anime_tyan:0 "Тян"
-ac_trap:0 "Трап"
-ac_atom_concern_trait:0 "Атомный концерн"
-ac_tyan_militarist:0 "§YМилитаристка§!"
-ac_defender:0 "Оборонец"
-ac_revolutionary:0 "§RРеволюционер§!"
-ac_peoples_favorite:0 "§BЛюбимеца народа§!"
-ac_jack_of_all_trades_trait:0 "Мастерская на все руки"
-ac_minister_of_health:0 "Министр здравоохранения"
-ac_peoples_favorite_minister:0 "§BЛюбимеца народа§!"
-ac_demon_lord:0 "§RВладыка демонов§!"
-ac_communist_revolutionary:0 "Коммунист революционер"
-ac_democratic_reformer:0 "Демократ реформатор"
-ac_fascist_demagogue:0 "Фашист демагог"
-ac_staunch_monarchist:0 "Монархист"
-ac_princess_of_terror:0 "§RПринцесса террора§!"
+ ac_idol: "Идол"
+ ac_patron_of_intelligence: "Покровитель разведки"
+ ac_tsundere: "Цундере"
+ ac_patron_of_the_military_industrial_complex: "Покровитель ВПК"
+ ac_dictator: "Диктатор"
+ ac_patron_of_industry: "Покровитель индустрии"
+ ac_android: "Андроид"
+ ac_patron_of_science: "Покровитель науки"
+ ac_superweapon: "Супер оружие"
+ ac_empress: "Императрица"
+ ac_popular_figurehead: "§BПопулярная§!"
+ ac_intelligence_princess: "Принцесса-шпионка"
+ ac_silent_workhorse: "Рабочая лошадка"
+ ac_nuclear_mazoku: "Атомный мазоку"
+ ac_girl_scientist: "Девушка учёный"
+ ac_propaganda_expert: "Эксперт по пропоганде"
+ ac_first_lady: "Первая леди"
+ ac_naval_base_engineer: "Строитель военно морских баз"
+ ac_infrastructure_developer: "Министр транспорта"
+ ac_captain_of_industry: "Министр примышленности"
+ ac_war_industrialist: "Военный магнат"
+ ac_submarine_manufacturer: "Разработчик подводных лодок"
+ ac_carrier_manufacturer: "Разработчик Авианосцев"
+ ac_battlefleet_designer: "Разработчик надводных боевых кораблей"
+ ac_anime_tyan: "Тян"
+ ac_trap: "Трап"
+ ac_atom_concern_trait: "Атомный концерн"
+ ac_tyan_militarist: "§YМилитаристка§!"
+ ac_defender: "Оборонец"
+ ac_revolutionary: "§RРеволюционер§!"
+ ac_peoples_favorite: "§BЛюбимеца народа§!"
+ ac_jack_of_all_trades_trait: "Мастерская на все руки"
+ ac_minister_of_health: "Министр здравоохранения"
+ ac_peoples_favorite_minister: "§BЛюбимеца народа§!"
+ ac_demon_lord: "§RВладыка демонов§!"
+ ac_communist_revolutionary: "Коммунист революционер"
+ ac_democratic_reformer: "Демократ реформатор"
+ ac_fascist_demagogue: "Фашист демагог"
+ ac_staunch_monarchist: "Монархист"
+ ac_princess_of_terror: "§RПринцесса террора§!"
+ ac_quartermaster_general: "Генерал-квартирмейстер"
 
 #unut leader traits
- ac_exp_trait:0 "Высокая обучаемость"
- ac_exp_navy_trait:0 "Высокая обучаемость"
+ ac_exp_trait: "Высокая обучаемость"
+ ac_exp_navy_trait: "Высокая обучаемость"
+
+#ideas
+ ac_idea_anime_academy: "Анимешная академия"
+ ac_idea_anime_general_staff: "Анимешный генеральный штаб"
+ ac_idea_idea_anime_intelligence_agency: "Анимешное разведывательное агентство"
+ ac_idea_anime_admiralty: "Амешное адмиралтейство"
