--- a/localisation/ac_decision_l_english.yml
+++ b/localisation/ac_decision_l_english.yml
@@ -9,14 +9,19 @@
  ac_decision_gacha_admirals: "Hire Admiral"
  ac_decision_gacha_political_advisors: "Hire an advisor"
  ac_decision_gacha_theorists: "Hire a theorist"
+ ac_decision_gacha_air_chiefs: "Hire an air force general"
  ac_decision_gacha_operatives: "Hire an operative"
  ac_decision_enable_traps: "Enable Traps"
  ac_decision_enable_traps_desc: "§RAlarm!§!"
- ac_decision_gacha_trap_generals: "Hire trap generals"
- ac_decision_gacha_trap_admirals: "Hire an admiral's trap."
- ac_decision_gacha_trap_political_advisors: "Hire a counselor trap"
- ac_decision_gacha_trap_theorists: "Hire a theorist trap"
- ac_decision_gacha_trap_operatives: "Hire an operative"
+ ac_decision_gacha_trap_generals: "Hire trap general"
+ ac_decision_gacha_trap_admirals: "Hire trap admiral"
+ ac_decision_gacha_trap_political_advisors: "Hire a trap advisor"
+ ac_decision_gacha_trap_theorists: "Hire a trap theorist"
+ ac_decision_gacha_trap_air_chiefs: "Hire an trap air force general"
+ ac_decision_gacha_trap_operatives: "Hire an trap operative"
+
+
+#Liders
  ac_change_leader_to_anastasia_romanova: "Assign §GAnastasia Romanova§! the leader"
  ac_change_leader_to_histoire: "Assign §GHistoire§! the leader"
  ac_change_leader_to_velvet_crowe: "Assign §GVelvet Crowe§! the leader"
@@ -47,6 +52,7 @@
  ac_tt_gacha_political_advisors: "Get a random advisor"
  ac_tt_gacha_theorists: "Get a random theorist"
  ac_tt_gacha_operatives: "Get a random operative"
+ ac_tt_gacha_air_chiefs: "Let's get a random air general"
 
 #political_actions
  ac_retire_leader: "§G[ROOT.GetLeader]§! is retiring"
