--- a/localisation/ac_decision_l_russian.yml
+++ b/localisation/ac_decision_l_russian.yml
@@ -18,7 +18,7 @@
  ac_decision_gacha_trap_political_advisors: "Нанять трапа советника"
  ac_decision_gacha_trap_theorists: "Нанять трапа теоретика"
  ac_decision_gacha_trap_air_chiefs: "Нанять трапа генерала авиации"
- ac_decision_gacha_trap_operatives: "Нанять оперативника"
+ ac_decision_gacha_trap_operatives: "Нанять трапа оперативника"
 
 #Liders
  ac_change_leader_to_anastasia_romanova: "Назначить  §GАнастасию Романову§! лидером"
