--- a/localisation/ac_characters_l_english.yml
+++ b/localisation/ac_characters_l_english.yml
@@ -91,6 +91,7 @@
   ac_snow: "Snow"
   ac_alicia: "Alicia"
   ac_isht_karin_orte: "Isht Karin Orte"
+  ac_mona_megistus: "Mona Megistus"
 
  #Admirals
   ac_yamato_kancol: "Yamato Kancol"
