--- a/localisation/ac_traits_l_english.yml
+++ b/localisation/ac_traits_l_english.yml
@@ -41,6 +41,7 @@ ac_fascist_demagogue: "Fascist Demagogue"
 ac_staunch_monarchist: "Staunch Monarchist"
 ac_princess_of_terror: "§RPrincess of Terror§!"
  ac_quartermaster_general: "Quartermaster General"
+ ac_trait_astrologist: "Astrologist"
 
 #unut leader traits
  ac_exp_trait: "High learning ability"
