--- a/localisation/ac_traits_l_russian.yml
+++ b/localisation/ac_traits_l_russian.yml
@@ -41,6 +41,7 @@
  ac_staunch_monarchist: "Монархист"
  ac_princess_of_terror: "§RПринцесса террора§!"
  ac_quartermaster_general: "Генерал-квартирмейстер"
+ ac_trait_astrologist: "Астролог"
 
 #unut leader traits
  ac_exp_trait: "Высокая обучаемость"
