--- a/localisation/ac_traits_l_russian.yml
+++ b/localisation/ac_traits_l_russian.yml
@@ -42,6 +42,7 @@
  ac_princess_of_terror: "§RПринцесса террора§!"
  ac_quartermaster_general: "Генерал-квартирмейстер"
  ac_trait_astrologist: "Астролог"
+ ac_nuclear_scientist: "$nuclear_scientist$"
 
 #unut leader traits
  ac_exp_trait: "Высокая обучаемость"
