--- a/localisation/ac_traits_l_english.yml
+++ b/localisation/ac_traits_l_english.yml
@@ -42,6 +42,7 @@ ac_staunch_monarchist: "Staunch Monarchist"
 ac_princess_of_terror: "§RPrincess of Terror§!"
  ac_quartermaster_general: "Quartermaster General"
  ac_trait_astrologist: "Astrologist"
+ ac_nuclear_scientist: "$nuclear_scientist$"
 
 #unut leader traits
  ac_exp_trait: "High learning ability"
