--- a/localisation/ac_decision_l_russian.yml
+++ b/localisation/ac_decision_l_russian.yml
@@ -38,6 +38,7 @@
  ac_recruit_homare_nao: "Нанять §GХомаре Нао§!"
  ac_recruit_takumi_musashino: "Нанять §GТакуми Мусасино§!"
  ac_recruit_hideri_kanzaki: "Нанять §GХидэри Кандзаки§!"
+ ac_recruit_ishtar: "Нанять §GИштар§!"
 
 #Liders
  ac_change_leader_to_anastasia_romanova: "Назначить  §GАнастасию Романову§! лидером"
@@ -63,6 +64,7 @@
  ac_change_leader_to_prinz_eugen: "§G[ac_prinz_eugen.getname]§! станет лидером государства"
  ac_change_leader_to_mona_megistus: "§G[ac_mona_megistus.GetName]§! станет лидером государства"
  ac_change_leader_to_asuka: "§G[ac_asuka.GetName]§! станет лидером государства"
+ ac_change_leader_to_ishtar: "§G[ac_ishtar.GetName]§! станет лидером государства"
 
 #tooltips
  ac_tt_count_generals: "Нанято хотя бы 5 генералов"
