--- a/localisation/ac_ideas_l_english.yml
+++ b/localisation/ac_ideas_l_english.yml
@@ -2,4 +2,7 @@
 ac_organization_futabu: "Futa-Bu!"
 ac_organization_winry_rockbell_manufacturer: "Winry Rockbell Workshop"
 ac_organization_ifrit_forge: "§RIfrit Forge§!"
-
+ ac_idea_anime_academy: "Anime Academy"
+ ac_idea_anime_general_staff: "Anime General Staff".
+ ac_idea_idea_anime_anime_intelligence_agency: "Anime Intelligence Agency".
+ ac_idea_anime_admiralty: "Anime Admiralty".
