--- a/localisation/ac_ideas_l_russian.yml
+++ b/localisation/ac_ideas_l_russian.yml
@@ -2,5 +2,8 @@
 ac_organization_winry_rockbell_manufacturer: "Мастерская Винри Рокбелл"
 ac_organization_futabu: "Футабу!"
 ac_organization_ifrit_forge: "§RКузница Ифрит§!"
-
+ ac_idea_anime_academy: "Анимешная академия"
+ ac_idea_anime_general_staff: "Анимешный генеральный штаб"
+ ac_idea_idea_anime_intelligence_agency: "Анимешное разведывательное агентство"
+ ac_idea_anime_admiralty: "Амешное адмиралтейство"
 
