--- a/localisation/ac_decision_l_english.yml
+++ b/localisation/ac_decision_l_english.yml
@@ -6,6 +6,7 @@
  ac_decision_create_anime_admiralty: "Create Anime Admiralty"
  ac_decision_create_anime_intelligence_agency: "Create anime intelligence agency"
  ac_decision_change_to_waifuland: "Transform the state into §YWaifuland§!"
+ ac_decision_change_to_trapland: "Transform the state into §YTrapland§!"
  ac_decision_gacha_generals: "Hire a General"
  ac_decision_gacha_admirals: "Hire Admiral"
  ac_decision_gacha_political_advisors: "Hire an advisor"
