--- a/localisation/ac_decision_l_russian.yml
+++ b/localisation/ac_decision_l_russian.yml
@@ -6,6 +6,7 @@
  ac_decision_create_anime_admiralty: "Создать Анимешное адмиралтейство"
  ac_decision_create_anime_intelligence_agency: "Создать Анимешное разведовательное агенство"
  ac_decision_change_to_waifuland: "Преобразовать государство в §YВайфулэнд§!"
+ ac_decision_change_to_trapland: "Преобразовать государство в §YТраплэнд§!"
  ac_decision_gacha_generals: "Нанять генерала"
  ac_decision_gacha_admirals: "Нанять адмирала"
  ac_decision_gacha_political_advisors: "Нанять советника"
